2012-08-16  Jens Hauke  <hauke@par-tec.com>	-	5.0.39-1

	* Update the extoll plugin to extoll2

	* Fix missing initializer in the ofed plugin.

2012-05-23  Jens Hauke  <hauke@par-tec.com>

	* pscom: Build only libraries and tools. Build the package
	"pscom-modules" for the linux kernel modules like p4sock.ko.

2012-03-26  Jens Hauke  <hauke@par-tec.com>	-	5.0.38-1

	* Fix: handling of new connections after posting anysrc
	receives.

	* enhance: License with QPL

	* feature: test_nodes is now using libpscom

	* add pscom_dispatch example to the source

2011-12-02  Thomas Moschny <moschny@par-tec.com>	5.0.37-1

	* psm: share one progress engine (ipeek) with all
	connections. Greatly enhances performance e.g. for namd2.

	* Fix the initial state of receive requests from
	socket->default_recv.

	* Fix assertion test from _pscom_cancel_recv with ANY_SOURCE
	requests. Fixes two failing mpich2 tests.

	* Fix missing -ldl for openib_pp tools.

	* Fix compiler warnings in psofed.c and psoib.c.

2011-07-14  Jens Hauke  <hauke@par-tec.com>	-	5.0.36-1

	* feature: Native qlogic psm support

2011-06-01  Jens Hauke  <hauke@par-tec.com>	-	5.0.35-1

	* psoib: revert 5.0.34-1 error reporting.

2011-05-30  Jens Hauke  <hauke@par-tec.com>	-	5.0.34-1

	* Fix a race in ufd_poll.

	* Scaling fix: Increase default PSP_TCP_BACKLOG to 262144.

	* psoib: increased error reporting.

	* Fix PSP_DEBUG_OUT parsing with malformed file names.

	* enhance: Prefix debug output with the socket name (= mpi rank).

	* Fix receive request counting after termination of a broken
	connection. (Was false positive "deadlock detected")

	* enhance: pscom_debug: Use ssh. New option -p to use pssh.

2010-11-11  Jens Hauke  <hauke@par-tec.com>	-	5.0.33-2

	* psbuild for the git buildbots

2010-08-23  Jens Hauke  <hauke@par-tec.com>	-	5.0.33-1

	* Fix: p4ether: linearize rx skb. Fix bnx2 fragmented receive
	  skb's. (Corrupted messages with pscom over p4sock over bnx2)
