@@ -191,6 +191,7 @@ void pscom_openib_init(void)
 //		psoib_event_count = 0;
 //	}
 	pscom_env_get_int(&psoib_event_count, ENV_OPENIB_EVENT_CNT);
+	pscom_env_get_int(&psoib_ignore_wrong_opcodes, ENV_OPENIB_IGNORE_WRONG_OPCODES);
 
 	INIT_LIST_HEAD(&pscom_cq_poll.next);
 	pscom_cq_poll.do_read = pscom_poll_cq;
