@@ -1,25 +1,15 @@
 #!/bin/bash
 #
-# Open ParaStation
+# ParaStation
 #
-# Copyright (C) 2010 ParTec Cluster Competence Center GmbH, Munich
+# Copyright (C) 2010-2012 ParTec Cluster Competence Center GmbH, Munich
 #
-# This program is free software: you can redistribute it and/or modify
-# it under the terms of the GNU General Public License as published by
-# the Free Software Foundation, either version 3 of the License, or
-# (at your option) any later version.
-#
-# This program is distributed in the hope that it will be useful,
-# but WITHOUT ANY WARRANTY; without even the implied warranty of
-# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-# GNU General Public License for more details.
-#
-# You should have received a copy of the GNU General Public License
-# along with this program.  If not, see <http://www.gnu.org/licenses/>.
+# This file may be distributed under the terms of the Q Public License
+# as defined in the file LICENSE.QPL included in the packaging of this
+# file.
 #
 # Author:	Jens Hauke <hauke@par-tec.com>
 #
-
 
 function error() {
     echo "$*" >&2
@@ -67,6 +57,7 @@ EOF
 
 arg_prjroot="."
 arg_fmt="all"
+arg_newline=""
 
 function parse_arg() {
     while [ $# -gt 0 ]; do
@@ -79,6 +70,7 @@ function parse_arg() {
 	    --isrelease)	arg_isrelease="1"; arg_fmt="none";;
 	    --help|-h)		usage;;
 	    --verbose|-v)	arg_verbose=1;;
+	    -n)			arg_newline="-n";;
 	    *)			echo "WARNING: unhandled option '$1'";;
 	esac
 	shift
@@ -184,10 +176,10 @@ version="${version//[^.a-zA-Z0-9]/_}"
 release="${release//[^a-zA-Z0-9]/_}"
 
 case "$arg_fmt" in
-    version)	echo "$version";;
-    release)	echo "$release";;
+    version)	echo $arg_newline "$version";;
+    release)	echo $arg_newline "$release";;
     none)	;;
-    *)		echo "$version-$release";;
+    *)		echo $arg_newline "$version-$release";;
 esac
 
 if [ "$arg_isrelease" != "1" ];then
